// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentComponent should show "canModify" @Input 1`] = `
<app-comment
  canModify={[Function Boolean]}
  comment={[Function Object]}
  delete={[Function EventEmitter]}
  locale={[Function String]}
>
  <mat-card
    class="comment mat-card"
  >
    <mat-progress-bar
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="comment__loader mat-progress-bar mat-primary ng-tns-c15-0 _mat-animation-noopable"
      hidden=""
      mode="indeterminate"
      ng-reflect-mode="indeterminate"
      role="progressbar"
    >
      <svg
        class="mat-progress-bar-background mat-progress-bar-element"
        focusable="false"
        height="4"
        width="100%"
      >
        <defs>
          <pattern
            height="4"
            id="mat-progress-bar-5"
            patternUnits="userSpaceOnUse"
            width="8"
            x="4"
            y="0"
          >
            <circle
              cx="2"
              cy="2"
              r="2"
            />
          </pattern>
        </defs>
        <rect
          fill="url('/#mat-progress-bar-5')"
          height="100%"
          width="100%"
        />
      </svg>
      <div
        class="mat-progress-bar-buffer mat-progress-bar-element"
      />
      <div
        class="mat-progress-bar-primary mat-progress-bar-fill mat-progress-bar-element"
        ng-reflect-ng-style="[object Object]"
        style="transform: scaleX(0);"
      />
      <div
        class="mat-progress-bar-secondary mat-progress-bar-fill mat-progress-bar-element"
      />
    </mat-progress-bar>
    <mat-card-content
      class="mat-card-content ng-tns-c15-0"
    >
      <p
        class="ng-tns-c15-0"
      >
         body 
      </p>
      <div
        class="comment__delete"
      >
        <app-delete-btn
          class="ng-tns-c15-0"
          ng-reflect-is-deleting="false"
        >
          <div
            id="delete"
          />
        </app-delete-btn>
      </div>
    </mat-card-content>
    <mat-card-header
      class="mat-card-header ng-tns-c15-0"
    >
      <div
        class="comment__avatar mat-card-avatar ng-tns-c15-0"
        mat-card-avatar=""
      >
        <a
          class="ng-tns-c15-0"
          ng-reflect-link-params="/profile,username"
        >
          <div
            class="ng-tns-c15-0"
          >
            <img
              alt="username"
              appavatar=""
              class="ng-tns-c15-0"
              src="image"
            />
          </div>
        </a>
      </div>
      <div
        class="mat-card-header-text"
      >
        <mat-card-title
          class="mat-card-title ng-tns-c15-0"
        >
          <a
            class="comment__author"
            ng-reflect-link-params="/profile,username"
          >
            username
          </a>
        </mat-card-title>
        <mat-card-subtitle
          class="mat-card-subtitle ng-tns-c15-0"
        >
           12/14/18, 4:45 PM 
        </mat-card-subtitle>
      </div>
    </mat-card-header>
  </mat-card>
</app-comment>
`;

exports[`CommentComponent should show "comment" @Input 1`] = `
<app-comment
  canModify="false"
  comment={[Function Object]}
  delete={[Function EventEmitter]}
  locale={[Function String]}
>
  <mat-card
    class="comment mat-card"
  >
    <mat-progress-bar
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="comment__loader mat-progress-bar mat-primary ng-tns-c9-0 _mat-animation-noopable"
      hidden=""
      mode="indeterminate"
      ng-reflect-mode="indeterminate"
      role="progressbar"
    >
      <svg
        class="mat-progress-bar-background mat-progress-bar-element"
        focusable="false"
        height="4"
        width="100%"
      >
        <defs>
          <pattern
            height="4"
            id="mat-progress-bar-3"
            patternUnits="userSpaceOnUse"
            width="8"
            x="4"
            y="0"
          >
            <circle
              cx="2"
              cy="2"
              r="2"
            />
          </pattern>
        </defs>
        <rect
          fill="url('/#mat-progress-bar-3')"
          height="100%"
          width="100%"
        />
      </svg>
      <div
        class="mat-progress-bar-buffer mat-progress-bar-element"
      />
      <div
        class="mat-progress-bar-primary mat-progress-bar-fill mat-progress-bar-element"
        ng-reflect-ng-style="[object Object]"
        style="transform: scaleX(0);"
      />
      <div
        class="mat-progress-bar-secondary mat-progress-bar-fill mat-progress-bar-element"
      />
    </mat-progress-bar>
    <mat-card-content
      class="mat-card-content ng-tns-c9-0"
    >
      <p
        class="ng-tns-c9-0"
      >
         body 
      </p>
      <div
        class="comment__delete"
      >
        <app-delete-btn
          class="ng-tns-c9-0"
          hidden=""
          ng-reflect-is-deleting="false"
        >
          <div
            id="delete"
          />
        </app-delete-btn>
      </div>
    </mat-card-content>
    <mat-card-header
      class="mat-card-header ng-tns-c9-0"
    >
      <div
        class="comment__avatar mat-card-avatar ng-tns-c9-0"
        mat-card-avatar=""
      >
        <a
          class="ng-tns-c9-0"
          ng-reflect-link-params="/profile,username"
        >
          <div
            class="ng-tns-c9-0"
          >
            <img
              alt="username"
              appavatar=""
              class="ng-tns-c9-0"
              src="image"
            />
          </div>
        </a>
      </div>
      <div
        class="mat-card-header-text"
      >
        <mat-card-title
          class="mat-card-title ng-tns-c9-0"
        >
          <a
            class="comment__author"
            ng-reflect-link-params="/profile,username"
          >
            username
          </a>
        </mat-card-title>
        <mat-card-subtitle
          class="mat-card-subtitle ng-tns-c9-0"
        >
           12/14/18, 4:45 PM 
        </mat-card-subtitle>
      </div>
    </mat-card-header>
  </mat-card>
</app-comment>
`;

exports[`CommentComponent should show "isDeleting" loader via comment.isDeleting 1`] = `
<app-comment
  canModify="false"
  comment={[Function Object]}
  delete={[Function EventEmitter]}
  locale={[Function String]}
>
  <mat-card
    class="comment mat-card"
  >
    <mat-progress-bar
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="comment__loader mat-progress-bar mat-primary ng-tns-c12-0 _mat-animation-noopable"
      mode="indeterminate"
      ng-reflect-mode="indeterminate"
      role="progressbar"
    >
      <svg
        class="mat-progress-bar-background mat-progress-bar-element"
        focusable="false"
        height="4"
        width="100%"
      >
        <defs>
          <pattern
            height="4"
            id="mat-progress-bar-4"
            patternUnits="userSpaceOnUse"
            width="8"
            x="4"
            y="0"
          >
            <circle
              cx="2"
              cy="2"
              r="2"
            />
          </pattern>
        </defs>
        <rect
          fill="url('/#mat-progress-bar-4')"
          height="100%"
          width="100%"
        />
      </svg>
      <div
        class="mat-progress-bar-buffer mat-progress-bar-element"
      />
      <div
        class="mat-progress-bar-primary mat-progress-bar-fill mat-progress-bar-element"
        ng-reflect-ng-style="[object Object]"
        style="transform: scaleX(0);"
      />
      <div
        class="mat-progress-bar-secondary mat-progress-bar-fill mat-progress-bar-element"
      />
    </mat-progress-bar>
    <mat-card-content
      class="mat-card-content ng-tns-c12-0"
    >
      <p
        class="ng-tns-c12-0"
      >
         body 
      </p>
      <div
        class="comment__delete"
      >
        <app-delete-btn
          class="ng-tns-c12-0"
          hidden=""
          ng-reflect-is-deleting="true"
        >
          <div
            id="delete"
          />
        </app-delete-btn>
      </div>
    </mat-card-content>
    <mat-card-header
      class="mat-card-header ng-tns-c12-0"
    >
      <div
        class="comment__avatar mat-card-avatar ng-tns-c12-0"
        mat-card-avatar=""
      >
        <a
          class="ng-tns-c12-0"
          ng-reflect-link-params="/profile,username"
        >
          <div
            class="ng-tns-c12-0"
          >
            <img
              alt="username"
              appavatar=""
              class="ng-tns-c12-0"
              src="image"
            />
          </div>
        </a>
      </div>
      <div
        class="mat-card-header-text"
      >
        <mat-card-title
          class="mat-card-title ng-tns-c12-0"
        >
          <a
            class="comment__author"
            ng-reflect-link-params="/profile,username"
          >
            username
          </a>
        </mat-card-title>
        <mat-card-subtitle
          class="mat-card-subtitle ng-tns-c12-0"
        >
           12/14/18, 4:45 PM 
        </mat-card-subtitle>
      </div>
    </mat-card-header>
  </mat-card>
</app-comment>
`;
